
  * New 'bzr hg-import' command similar to 'bzr svn-import' and 
    'bzr git-import'. (Jelmer Vernooij)

  * Put idmap information in a bzr-hg-specific directory. (Jelmer Vernooij,
    #599397)

  * Add basic support for tags. (Jelmer Vernooij)

  * Check for Mercurial repository before checking for Bazaar repository.
    (Jelmer Vernooij, #674581, #688455)

 BUG FIXES

  * Mark as compatible with Bazaar 2.1, 2.2, 2.3 and 2.4. (Jelmer Vernooij)

  * Check for Mercurial version before attempting to import it.
    (#432100, Jelmer Vernooij)

  * Deal with spaces in paths. (Jelmer Vernooij)

  * Remove empty directories during fetch. (Jelmer Vernooij)

  * Mark Mercurial 1.6 and 1.7 as supported, drop support for earlier versions.
    (#486899, Jelmer Vernooij)

  * Don't warn about development versions of Mercurial. (#492292, Jelmer 
    Vernooij)

  * Cope with unusual characters in changeset ids. (#498945, Jelmer Vernooij)

  * Only mention Mercurial version to use yet. (#517345, Jelmer Vernooij)

  * Only consider major version numbers in compatibility checks.
    (#517343, Jelmer Vernooij)

  * Cope with non-ascii characters in committer names, messages when 
    trying to create delta bases. (Jelmer Vernooij)

  * Fix conversion of symlinks. (#594335, Max Bowser)

  * Don't allow probing for Mercurial repositories over HTTP to break 
    bzr. (Jelmer Vernooij)

  * Fix recursive removing of parent empty directories. (#691994,
    Leonid Borisenko)

  * WorkingTree.commit()'s message argument is now optional, consistent
    with bzr.dev. (#692902, Jelmer Vernooij)

  * Fix handling of unknown strings in converted_from extra. 
    (#670870, Jelmer Vernooij)

  * Fix handling of first revision without changes. (Jelmer Vernooij, #688459)

  * Support stop_revision in Branch.pull(). (Jelmer Vernooij, #544701)

 DOCUMENTATION

  * Add some basic instructions in INSTALL. (Martin Pool)

0.1.0		2009-09-24

 Initial release.